Fix z-index for RCFilters' overlay
Currently the personal bar displays on top of it. This wasn't
visible until some popups started opening upwards rather than
downwards. We should fix this better some time...

Bug: T182711

--- a/skinStyles/ooui.less
+++ b/skinStyles/ooui.less
@@ -1,4 +1,5 @@
 .oo-ui-windowManager-modal,
+.skin-vector .mw-rcfilters-ui-overlay,
 .skin-vector .ve-ui-overlay-global {
 	z-index: 101;
 	position: relative;
